Fix : Help icon alignment issue in customizer

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -3045,6 +3045,10 @@ input[type="text"].select2-search__field {
     border-top: 1px dashed var(--ast-customizer-color-7);
 }
 
+#customize-control-astra-settings-product-sale-percent-value .ast-control-tooltip {
+    top: 24px;
+} 
+
 .customize-control.ast-top-dotted-divider .ast-adv-toggle-icon {
     top: 25px;
 }
@@ -5034,7 +5038,7 @@ span.customize-control-title.ast-group-section-title {
 }
 
 .customize-control-ast-sortable .ast-sortable-subfields-wrap .ast-responsive-btns {
-    top: 5px;
+    top: 7px;
 }
 
 .ast-sortable-subfields-wrap .ast-fields-wrap {
@@ -5078,7 +5082,7 @@ span.customize-control-title.ast-group-section-title {
     margin-right: auto;
 }
 .ast-sortable-subfields-wrap .customize-control-ast-responsive-slider .ast-responsive-slider-btns {
-    top: -5px;
+    top: -2px;
 }
 
 .customize-control-ast-toggle-control .components-toggle-control .components-base-control__field, .ast-togglecontrol-wrapper .components-base-control__field {
@@ -5625,6 +5629,10 @@ input[type="text"].select2-search__field {
     padding-top: 24px;
     border-top: 1px dashed var(--ast-customizer-color-7);
 }
+
+#customize-control-astra-settings-product-sale-percent-value .ast-control-tooltip {
+    top: 24px;
+} 
 
 .customize-control.ast-top-dotted-divider .ast-adv-toggle-icon {
     top: 25px;
