--- a/inc/customizer/custom-controls/assets/css/unminified/divider.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/divider.css
@@ -126,6 +126,10 @@
     border-top: 1px dashed var(--ast-customizer-color-7);
 }
 
+#customize-control-astra-settings-product-sale-percent-value .ast-control-tooltip {
+    top: 24px;
+} 
+
 .customize-control.ast-top-dotted-divider .ast-adv-toggle-icon {
     top: 25px;
 }
